# library-management-system

./: .env.example  .gitignore  README.md  pyproject.toml  seed.py
app/: config.py  database.py  main.py
app/database/: database.py  seeder.py
app/models/: __init__.py  book.py  borrow.py  category.py  fine.py  user.py
app/routes/: book.py
app/schemas/: auth.py  book.py
app/utils/: jwt.py
