[project]
name = "library-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-pagination>=0.15.14",
    "fastapi[standard]>=0.136.0",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.50",
]
